[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resource/Fonts/TextFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resource/Fonts/ButtonStyle.tres" type="Theme" id=2]
[ext_resource path="res://Resource/Fonts/TextFontLittle.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scene/FavTabs.gd" type="Script" id=4]

[node name="Test text" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 27.0
margin_right = -1.0
margin_bottom = -1.0
script = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -9.15527e-05
margin_right = -11.0
margin_bottom = 9.15527e-05
rect_min_size = Vector2( 440, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 440.0
margin_bottom = 212.0
rect_min_size = Vector2( 400, 0 )

[node name="Empty" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )

[node name="Header" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 440.0
margin_bottom = 124.0
rect_min_size = Vector2( 440, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Test textTest textTest textTest textTest textTest textTest textTest textTest textTest textTest textTest c c c c c c c c c c c c c c c  textTest textTest textTes xcx cx xc  c c c t text"
autowrap = true

[node name="Empty2" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 440.0
margin_bottom = 146.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )

[node name="Description" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 440.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Data inform"
autowrap = true

[node name="Empty3" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 440.0
margin_bottom = 190.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )

[node name="Status" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 440.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Data inform"
autowrap = true

[node name="Level" type="Label" parent="."]
anchor_left = 0.0541126
anchor_top = 0.901099
anchor_right = 0.294372
anchor_bottom = 0.945055
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Уровень: WWW"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StatusBtn" type="Button" parent="."]
anchor_left = 0.688312
anchor_top = 0.895605
anchor_right = 0.948052
anchor_bottom = 0.95055
rect_min_size = Vector2( 120, 20 )
theme = ExtResource( 2 )
text = "Завершить"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OpenSchemeBtn" type="Button" parent="."]
anchor_left = 0.406926
anchor_top = 0.895605
anchor_right = 0.666667
anchor_bottom = 0.95055
rect_min_size = Vector2( 120, 20 )
theme = ExtResource( 2 )
text = "Перейти"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="StatusBtn" to="." method="_on_StatusBtn_pressed"]
[connection signal="pressed" from="OpenSchemeBtn" to="." method="_on_OpenSchemeBtn_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
